<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/billAmount" />

            <EditText
                android:id="@+id/billText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:textSize="20sp"
                android:inputType="numberDecimal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp" >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tipAmount"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/tipAmountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="5"
                    android:textSize="20sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalAmount"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/totalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:ems="5"
                    android:textSize="20sp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tipPercentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:text="@string/defaultPercent"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/tipSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <SeekBar
            android:id="@+id/tipSlider"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:progress="2"
            app:layout_constraintBottom_toTopOf="@+id/calculateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tipPercentText" />

        <TextView
            android:id="@+id/percent5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fivePercent"
            app:layout_constraintStart_toStartOf="@+id/tipSlider"
            app:layout_constraintTop_toBottomOf="@+id/tipSlider" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipText"
            app:layout_constraintEnd_toEndOf="@+id/tipSlider"
            app:layout_constraintStart_toStartOf="@+id/tipSlider"
            app:layout_constraintTop_toBottomOf="@+id/tipSlider" />

        <TextView
            android:id="@+id/percent30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirtyPercent"
            app:layout_constraintEnd_toEndOf="@+id/tipSlider"
            app:layout_constraintTop_toBottomOf="@+id/tipSlider" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculateButton"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>